--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.1.0
+Date: 2026-01-02
+  Changes:
+    - First release as fork
+  Bugfixes:
+---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 2025-03-14
   Changes:
